scrollbar fix

--- a/src/components/Messages/messages.sass
+++ b/src/components/Messages/messages.sass
@@ -8,16 +8,14 @@
     word-wrap: break-word
     line-height: 1.75
     overflow-y: auto
-
-::-webkit-scrollbar
-    width: 0.5rem
-
-::-webkit-scrollbar-track
-    display: none
-
-::-webkit-scrollbar-thumb
-    background-color: black
-    border: 0.1rem solid $font-color-main
-    border-radius: 0.25rem
-    &:hover
-        background-color: $font-color-main
+    // &::-webkit-scrollbar // somehow bugged
+    //     display: none
+        // width: 10px
+        // &-track
+        //     background: transparent
+        // &-thumb
+        //     background-color: transparent
+        //     border: 1px solid $font-color-main
+        //     border-radius: 5px
+        //     &:hover
+        //         background-color: $font-color-main
